manual/home-ingress/overlays/prod/nas/svc.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "nas"
  namespace: home-ingress
spec:
  ports:
    - name: "nas"
      protocol: "TCP"
      port: 5000
